--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     links:
       - db
     command: >
-      sh -c "docker-php-ext-install mysqli && apache2-foreground"
+      sh -c "docker-php-ext-install pdo pdo_mysql && apache2-foreground"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
